[gd_scene load_steps=7 format=3 uid="uid://djiycmbjjnmqw"]

[ext_resource type="Script" path="res://scripts/npc/enemy.gd" id="1_p4ycf"]
[ext_resource type="Script" path="res://scripts/npc/shootingEnemy.gd" id="1_vnkjb"]
[ext_resource type="PackedScene" uid="uid://dme6ahnwpbooo" path="res://objects/Ghol_Float1.2.glb" id="2_64jh2"]
[ext_resource type="PackedScene" uid="uid://cfq0aps387o0v" path="res://prefabs/gameplay/projectile.tscn" id="4_l4hya"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_43t56"]
radius = 0.401116
height = 1.35028

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ocq1k"]
height = 1.0
radius = 3.0

[node name="ShootingEnemy" type="CharacterBody3D" node_paths=PackedStringArray("animation_player") groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_p4ycf")
animation_player = NodePath("Ghol_Float1_2/AnimationPlayer")

[node name="Ghol_Float1_2" parent="." instance=ExtResource("2_64jh2")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0, 0)

[node name="Skeleton3D" parent="Ghol_Float1_2/Armature" index="0"]
bones/1/position = Vector3(1.18424e-08, 1.26745, -1.39932e-09)
bones/1/rotation = Quaternion(0.708273, -0.00260418, -0.705867, -0.00971868)
bones/2/position = Vector3(3.14783e-09, 0.279682, -2.4121e-08)
bones/2/rotation = Quaternion(0.031514, -3.33858e-08, -4.29886e-08, 0.999503)
bones/3/position = Vector3(-3.78351e-10, 0.35285, -3.17549e-08)
bones/3/rotation = Quaternion(-0.0938688, 0.00382353, 0.0405188, 0.994752)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_43t56")

[node name="Shooting" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_vnkjb")
projectile_scene = ExtResource("4_l4hya")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Shooting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("CylinderShape3D_ocq1k")

[node name="ShootTimer" type="Timer" parent="Shooting"]
wait_time = 2.0
one_shot = true

[node name="ProjectileSpawn" type="Marker3D" parent="Shooting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.35, -0.243953)

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GotHitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Shooting" to="Shooting" method="_on_body_entered"]
[connection signal="body_exited" from="Shooting" to="Shooting" method="_on_body_exited"]
[connection signal="timeout" from="Shooting/ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Ghol_Float1_2"]
